--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "css-loader": "^1.0.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^10.4.1",
     "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^4.20.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
