--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amoCRM_Vue",
   "description": "Vue.js widget for amoCRM",
   "version": "1.0.0",
-  "author": "",
+  "author": "Pavel Kupreev <iamkuper@gmail.com>",
   "scripts": {
     "dev": "webpack-dev-server --hot --open",
     "build": "webpack"
@@ -23,10 +23,8 @@
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "css-loader": "^1.0.0",
-    "sass": "^1.60.0",
-    "sass-loader": "^10.4.1",
     "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.7.14",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.20.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
